--- a/article2.html
+++ b/article2.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas html 2024</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Website</h1>
+    <h2>THANIA G.N NELWAN</h2>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li class="dropdown">
+                <a class="dropbtn">Blog &#9662;</a>
+                <div class="dropdown-content">
+                    <a href="article1.html">Satu Yang Paling Sederhana?</a>
+                    <a href="article2.html">Dualitas dan Keselarasan</a>
+                    <a href="article3.html">Angka 3</a>
+                </div>
+            </li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -20,19 +28,15 @@
 </header>
 
 <main>
-    <section>
-        <h2>Blog</h2>
-        <nav>
-            <ul>
-                <li><a href="article1.html">Artikel 1</a></li>
-                <li><a href="article2.html">Artikel 2</a></li>
-                <li><a href="article3.html">Artikel 3</a></li>
-            </ul>
-        </nav>
-    </section>
-    <section>
-        <h3>JUDUL ARTIKEL</h3>
-        <p>isi</p>
+    <section class="article-section">
+        <h2>Dualitas dan Keselarasan</h2>
+        <img src="gbr2.png" alt="Gambar Angka 2" class="article-image" width="300px">
+        <p>Angka dua, simbol keberadaan dualitas, menjadi pusat perhatian dalam berbagai konteks budaya, ilmu pengetahuan, dan spiritualitas. Di dalam segala aspek kehidupan, angka ini menawarkan makna yang dalam tentang konsep keseimbangan, hubungan, dan keberdampingan yang harmonis. Mari kita eksplorasi lebih lanjut tentang signifikansi dan implikasi filosofis dari angka dua.</p>
+        <p>Dalam dunia alam semesta, angka dua merangkum prinsip fundamental dualitas, yang menggambarkan adanya dua sisi yang saling melengkapi dan berlawanan. Ini tercermin dalam banyak aspek alam, seperti siang dan malam, panas dan dingin, langit dan bumi, serta banyak lagi. Dualitas memainkan peran penting dalam menjaga keseimbangan dan harmoni dalam ekosistem alam.</p>
+        <p>Dalam hubungan manusia, angka dua melambangkan kedua sisi yang berbeda tetapi saling melengkapi. Ini bisa mengacu pada pasangan romantis, mitra kerja, atau bahkan hubungan antara teman. Angka dua menyoroti pentingnya kompromi, pengertian, dan kerjasama dalam menjaga keseimbangan dan harmoni dalam hubungan interpersonal.</p>
+        <p>Dari sudut pandang spiritual, angka dua mencerminkan perjalanan rohani manusia dalam mencapai kesatuan dengan kekuatan ilahi. Ini bisa menggambarkan dualitas antara tubuh dan jiwa, materi dan spiritualitas, atau pikiran dan hati. Penyatuan dua sisi yang berbeda ini menjadi tujuan utama dalam pencarian makna hidup dan pencerahan spiritual.</p>
+        <p>Angka dua juga membawa pesan tentang pentingnya keseimbangan dan keselarasan dalam kehidupan. Dengan memahami dualitas dan menghargai kedua sisi dari setiap situasi, manusia dapat mencapai harmoni dalam kehidupan mereka. Ini melibatkan pengakuan akan perbedaan, penerimaan akan kompleksitas, dan tekad untuk menemukan titik tengah yang memuaskan.</p>
+        <p>Dalam keseluruhan, angka dua adalah simbol yang kaya akan makna dalam berbagai konteks kehidupan. Dengan menghormati dualitas, manusia dapat menemukan kedamaian dalam kompleksitas, kekuatan dalam perbedaan, dan keharmonisan dalam hubungan mereka dengan dunia di sekitar mereka. Angka dua mengajarkan kita tentang pentingnya keseimbangan, keselarasan, dan penghormatan akan segala bentuk keberadaan.</p>
     </section>
 
 </main>
