--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tugas html 2024</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>Website</h1>
+    <h2>THANIA G.N NELWAN</h2>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li class="dropdown">
+                <a class="dropbtn">Blog &#9662;</a>
+                <div class="dropdown-content">
+                    <a href="article1.html">Satu Yang Paling Sederhana?</a>
+                    <a href="article2.html">Dualitas dan Keselarasan</a>
+                    <a href="article3.html">Angka 3</a>
+                </div>
+            </li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -20,9 +28,9 @@
 </header>
 
 <main>
-    <section>
+    <section class="contact-section">
         <h2>Informasi Kontak</h2>
-        <p>Thania  G.N Nelwan (19021106030)</p>
+        <p>Thania G.N Nelwan (19021106030)</p>
         <address>
             Email: thanianelwan026@student.unsrat.ac.id<br>
             Telepon: 0815-4303-xxxx
